--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
  <header>
     <picture>
-      <source media="(max-width: 600px)" srcset="imagens/imagem-mobile3.png">
+      <source media="(max-width: 600px)" srcset="imagens/imagem-mobile5.jpg">
 
       <img src="imagens/EDUARDA E EDUARDO (1370 x 500 px).png" alt="principal">
     </picture>
