--- a/index.lista.html
+++ b/index.lista.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>E&E</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
@@ -29,7 +29,10 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+            <div
+              class="collapse navbar-collapse justify-content-center"
+              id="navbarNavDropdown"
+            >
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                   <a
@@ -64,7 +67,6 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Lista virtual</a></li>
-                   
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -92,7 +94,14 @@
       </nav>
 
       <header>
-        <img src="imagens/EDUARDA E EDUARDO (1370 x 500 px).png" alt="" />
+        <picture>
+          <source
+            media="(max-width: 600px)"
+            srcset="imagens/imagem-mobile5.jpg"
+          />
+
+          <img src="imagens/imagem-principal.png" alt="principal" />
+        </picture>
       </header>
 
       <main>
@@ -105,17 +114,17 @@
 
         <p>
           A gente sempre imaginou construir uma vida juntos, e agora esse sonho
-          está se tornando realidade! Além do “sim”, também estamos
-          embarcando (literalmente) em uma nova aventura: daqui a dois anos,
-          vamos nos mudar para a Austrália! 🇦🇺✈ Ao invés de presentes
-          tradicionais, criamos uma lista simbólica com jeitinho especial: são
-          contribuições que vão nos ajudar nessa nova fase, desde as passagens,
-          bagagem extra, até aquele empurrãozinho se a imigração resolver
-          complicar (bate na madeira! Hahaha). Tudo com bom humor, amor e muita
-          gratidão. Você pode escolher a opção que mais combina com você ou
-          deixar o coração decidir. O valor não importa, o carinho sim. Cada
-          ajuda será parte dessa travessia e estará com a gente lá do outro lado
-          do mundo. Muito obrigado por fazer parte da nossa história. Com amor,
+          está se tornando realidade! Além do “sim”, também estamos embarcando
+          (literalmente) em uma nova aventura: daqui a dois anos, vamos nos
+          mudar para a Austrália! 🇦🇺✈ Ao invés de presentes tradicionais,
+          criamos uma lista simbólica com jeitinho especial: são contribuições
+          que vão nos ajudar nessa nova fase, desde as passagens, bagagem extra,
+          até aquele empurrãozinho se a imigração resolver complicar (bate na
+          madeira! Hahaha). Tudo com bom humor, amor e muita gratidão. Você pode
+          escolher a opção que mais combina com você ou deixar o coração
+          decidir. O valor não importa, o carinho sim. Cada ajuda será parte
+          dessa travessia e estará com a gente lá do outro lado do mundo. Muito
+          obrigado por fazer parte da nossa história. Com amor,
           Eduarda & Eduardo
         </p>
 
@@ -287,7 +296,8 @@
               <div class="card-body">
                 <h5 class="card-title">Paciencia da noiva</h5>
                 <p class="card-text">
-                  Ajude a pagar a paciência da noiva pós organizar todo o casamento
+                  Ajude a pagar a paciência da noiva pós organizar todo o
+                  casamento
                   <br />
                   <br />
                   R$105,00
@@ -431,7 +441,7 @@
               <div class="card-body">
                 <h5 class="card-title">Noiva nervosa</h5>
                 <p class="card-text">
-                   Ajuda para noiva não ficar nervosa antes da cerimonia
+                  Ajuda para noiva não ficar nervosa antes da cerimonia
                   <br />
                   <br />
                   R$45,00
@@ -467,7 +477,8 @@
               <div class="card-body">
                 <h5 class="card-title">Academia da noiva</h5>
                 <p class="card-text">
-                  Ajude a garantir que a vida fitnes da noiva continue na Australia
+                  Ajude a garantir que a vida fitnes da noiva continue na
+                  Australia
                   <br />
                   <br />
                   R$200,00
@@ -637,12 +648,15 @@
                 <a href="#" class="btn btn-primary">Comprar Presente</a>
               </div>
             </div>
-
           </div>
         </section>
       </main>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="script.js"></script>
   </body>
