--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <picture>
       <source media="(max-width: 600px)" srcset="imagens/imagem-mobile5.jpg">
 
-      <img src="imagens/imagem-principal.png" alt="principal">
+      <img src="imagens/principal.png" alt="principal">
     </picture>
  </header>
 
