--- a/index.lista.html
+++ b/index.lista.html
@@ -93,16 +93,13 @@
         </nav>
       </nav>
 
-      <header>
-        <picture>
-          <source
-            media="(max-width: 600px)"
-            srcset="imagens/imagem-mobile5.jpg"
-          />
+       <header>
+    <picture>
+      <source media="(max-width: 600px)" srcset="imagens/imagem-mobile5.jpg">
 
-          <img src="imagens/imagem-principal.png" alt="principal" />
-        </picture>
-      </header>
+      <img src="imagens/principal.png" alt="principal">
+    </picture>
+ </header>
 
       <main>
         <h3>LISTA DE CASAMENTO VIRTUAL</h3>
