--- a/index.presença.html
+++ b/index.presença.html
@@ -29,7 +29,8 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center">
+            <div class="collapse navbar-collapse justify-content-center"
+            id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                   <a
